roles/openshift-apps/bodhi/files/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bodhi-web
  labels:
    app: bodhi
    service: web
  namespace: bodhi
spec:
  ports:
    - name: web
      port: 8080
      targetPort: 8080
  selector:
    deploymentconfig: bodhi-web
