roles/openshift-apps/bodhi/files/route.yml
apiVersion: v1
kind: Route
metadata:
  name: bodhi-web
  labels:
    app: bodhi
spec:
  port:
    targetPort: web
  to:
    kind: Service
    name: bodhi-web
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
